--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 		body 
 		{
 			font-family: arial;
-			background-color: #cf5;
+			background-color: #ccc;
 			color: #454545;			
 			background-image: url("backgrounds/bg1.png"); 
             background-repeat: no-repeat;
